fix: overflow changed to auto instead of hidden

--- a/website/styles.css
+++ b/website/styles.css
@@ -6,7 +6,7 @@ body{
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .page-container{
